col-m añadidos en index

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <div id="welcome" class="container text-center">
 
         <div class="row"> <!-- Espacio -->
-            <div class="col espacio">
+            <div class="col-md espacio">
             </div>
         </div>
 
         <div class="row">
 
-            <div class="col-4"></div> <!-- Espacio -->
+            <div class="col-md-4"></div> <!-- Espacio -->
             <div id="ir_a" class="col-md-auto">
                 <h1>Bienvenidos a mi CV</h1>
                 <a id="ir_cv" href="cv.html">Continuar</a>
